base/api-gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    argocd.argoproj.io/tracking-id: api-gateway:networking.k8s.io/Ingress:default/api-gateway-ingress
spec:
  ingressClassName: nginx   # <-- ✨ REQUIRED
  rules:
    - host: ''
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 80
